# synchro

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: archi.plantuml
source/: CMakeLists.txt  main.cpp
source/synchrodata/: CMakeLists.txt
source/synchrodata/include/synchro/: Broadcaster.hpp  Pooler.hpp  SynchronizedData.hpp  Synchronizer.hpp
source/synchrodata/include/synchro/util/: SynchroUtils.hpp
tests/: CMakeLists.txt
tests/synchrodata/: CMakeLists.txt  SynchrodataTest.cpp
